test/negative/InterfaceFinalMethod.java
public interface InterfaceFinalMethod {
    public final f();
}
